app/assets/stylesheets/anzard.sass
/*
 * ANZARD - Australian & New Zealand Assisted Reproduction Database
 * Copyright (C) 2017 Intersect Australia Ltd
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see <http://www.gnu.org/licenses/>.
 */

@charset "UTF-8"

// VARIABLES - COLOURS

$dark2: #333333
$dark3: #666666

$light0: white

$red4: #dd4c39


// MIXINS - MARGIN + PADDING + WIDTH + HEIGHT + POSITION + TOP + BOTTOM + LEFT + RIGHT + FLOAT

=m-p-w-h-p-t-b-l-r-f($margin: "", $padding: "", $width: "", $height: "", $position: "", $top: "", $bottom: "", $left: "", $right: "", $float: "")
  @if $margin != ""
    margin: $margin
  @if $padding != ""
    padding: $padding
  @if $width != ""
    width: $width
  @if $height != ""
    height: $height
  @if $position != ""
    position: $position
  @if $top != ""
    top: $top
  @if $bottom != ""
    bottom: $bottom
  @if $left != ""
    left: $left
  @if $right != ""
    right: $right
  @if $float != ""
    float: $float

// MIXINS - WIDTH - NORMAL + MIN + MAX

=width($width: "", $minwidth: "", $maxwidth: "")
  @if $width != ""
    width: $width
  @if $minwidth != ""
    min-width: $minwidth
  @if $maxwidth != ""
    max-width: $maxwidth

// MIXINS - BORDER CONTROL

=borderradius($corner: "")
  border-radius: $corner
  -moz-border-radius: $corner
  -webkit-border-radius: $corner

=border($borderwidth: "", $borderstyle: "", $bordercolor: "", $allborderwidth: "", $borderradius: "", $topborderwidth: "", $topborderstyle: "", $topbordercolor: "", $bottomborderwidth: "", $bottomborderstyle: "", $bottombordercolor: "", $leftborderwidth: "", $leftborderstyle: "", $leftbordercolor: "", $rightborderwidth: "", $rightborderstyle: "", $rightbordercolor: "")
  border: $borderwidth $borderstyle $bordercolor
  border-width: $allborderwidth
  +borderradius($borderradius)
  border-top: $topborderwidth $topborderstyle $topbordercolor
  border-bottom: $bottomborderwidth $bottomborderstyle $bottombordercolor
  border-left: $leftborderwidth $leftborderstyle $leftbordercolor
  border-right: $rightborderwidth $rightborderstyle $rightbordercolor

// MIXINS - OPACITY

=opacity($opacity: "", $filteropacity: "")
  filter: alpha(opacity = $filteropacity)
  -khtml-opacity: $opacity
  -moz-opacity: $opacity
  opacity: $opacity

=opacity-25
  +opacity(0.25, 25)
=opacity-50
  +opacity(0.50, 50)
=opacity-75
  +opacity(0.75, 75)
=opacity-100
  +opacity(1, 100)

// MIXINS - CROSS-BROWSER INLINEBLOCK

=inlineblock
  display: -moz-inline-stack
  display: inline-block
  zoom: 1
  *display: inline
  vertical-align: top

// MIXINS - TRUNCATE

=truncate
  white-space: nowrap
  overflow: hidden
  text-overflow: ellipsis

// MIXINS - FONT CONTROL

=font($style: "", $weight: "", $size: "", $leading: "", $color: "", $decoration: "", $align: "")
  @if $style != ""
    font-style: $style
  @if $weight != ""
    font-weight: $weight
  @if $size != ""
    font-size: $size
  @if $leading != ""
    line-height: $leading
  @if $color != ""
    color: $color
  @if $decoration != ""
    text-decoration: $decoration
  @if $align != ""
    text-align: $align
  font-family: Helvetica, Arial, sans-serif

// MIXINS - CLEARFIX

// Include this Mixin on things that will contain floats. These rules will cause the space to be filled.
=clearfix
  zoom: 1
  &:before
    content: "\0020"
    display: block
    height: 0
    overflow: hidden
  &:after
    content: "\0020"
    display: block
    height: 0
    overflow: hidden
    clear: both

// BASE STYLES ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////

html, body

body
  background-color: #ffffff
  margin: 0
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
  font-size: 13px
  font-weight: normal
  line-height: 18px
  color: #404040


h1, h2, h3, h4, h5, h6
  +font("", "", 1em, 1em, $dark2)

//* Base heading styles
h1
  +font("", normal, 1.5em, 40px)

h2
  +font("", bold, 1.25em, 30px)

h3
  +font("", bold, 1em, 30px, $dark2)
  padding: 0 0 10px 0

h4
  +font("", bold, 0.813em, 18px, $dark2)
  padding: 0 0 10px 0


p

//* Paragraph style. Use for text, or for a libe break. </br> is for pebs, and you're not a pleb right?
span

//* Use as a default container for text that requires a Class or ID
a, a:visited

a:hover

ul

li

label

input[type=textarea], input[type=text], input[type=password], input[type=search], textarea

input[type=password]

div#page_container
  position: relative
  min-height: 92vh

div#content_wrapper
  padding-bottom: 2.5rem    /* Footer height */

div#footer
  position: absolute
  bottom: 0
  width: 100%
  height: 2.5rem            /* Footer height */

// NOTIFICATIONS /////////////////////////////////////////////////////////////////////////////////////////////////////////////////

// Base notification container for users

.formerror
  +m-p-w-h-p-t-b-l-r-f(0 0 20px 0)
  color: $red4

.field_with_errors
  +m-p-w-h-p-t-b-l-r-f("", "", 160px)
  display: inline

.field_with_errors input
  +border(1px, solid, $red4)

.field_with_errors select
  +border(1px, solid, $red4)

// BASE STYLES - STRUCTURE MODULES
//* Apply these class modules to elements. Any more than 3 modules per element is overkill and you should probably have a specific container.

//* Float an element to the left
.floatleft
  float: left

//* Float an element to the right
.floatright
  float: right

//* Basic row container
.rowform
  margin: 0 0 18px 0

//* Basic row / horizontal container with 1 paragraph return equiv.
.fields
  margin: 0 0 18px 0
  +inlineblock

.actions
  margin: 36px 0 0 0

// BASE STYLES - TEXT MODULES
//* Apply these to specific font containers. Any more than 2 text modules is overkill and a specific style / container should be used

.details
  +font("", "", 0.75em, 18px, $dark3)

.required
  color: #E25358

.bold
  font-weight: bold

.truncate
  white-space: nowrap
  overflow: hidden
  text-overflow: ellipsis

// ICONS /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

.close
  cursor: pointer
  position: relative
  overflow: hidden
  z-index: 0
  span
    +m-p-w-h-p-t-b-l-r-f("", "", 16px)
    +font("", bold, 1.75em, 14px, #404040)
    text-shadow: 0 1px 0 $light0
    +opacity-25
    cursor: pointer
  &:hover
    span
      +opacity-50

// FOOTER ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

#footer
  +m-p-w-h-p-t-b-l-r-f(0 auto, "", "", "", relative)
  +font("", normal, 0.813em, "", $dark3, none, center)

  .footerwrapper
    +m-p-w-h-p-t-b-l-r-f("", 10px 0 0 0, "", 26px, "", 0, 0, "", 0)
    min-width: 600px
    background: #F5F5F5
    +border(1px, solid, #dfdfdf)
    p
      +inlineblock

  .logo
    background: none
    padding: 0 0 4px 0
    margin: 0
    width: 35px
    height: 35px
    vertical-align: middle

  #dev
    cursor: pointer
    +inlineblock

// sortable tables
tr.sortable
  a
    +m-p-w-h-p-t-b-l-r-f("", 0 20px 0 0, "", "")
    +inlineblock
    cursor: pointer
    background: url("../images/icon_arrow_right_light.png") center right no-repeat
    -moz-background-size: 6px
    background-size: 6px
    &:hover
      background: url("../images/icon_arrow_down_dark.png") center right no-repeat
      -moz-background-size: 12px
      background-size: 12px
  a.current.asc
    background: url("../images/icon_arrow_up_blue.png") center right no-repeat
    -moz-background-size: 12px
    background-size: 12px
    &:hover
      background: url("../images/icon_arrow_down_dark.png") center right no-repeat
      -moz-background-size: 12px
      background-size: 12px
  a.current.desc
    background: url("../images/icon_arrow_down_blue.png") center right no-repeat
    -moz-background-size: 12px
    background-size: 12px
    &:hover
      background: url("../images/icon_arrow_up_dark.png") center right no-repeat
      -moz-background-size: 12px
      background-size: 12px

// ANZARD specific styles
.required
  color: #E25358

span.fatalerror-display
  color: #F00

div.fatalwarning>label
  color: #F00

#clinic_units select
  width: auto

.clinic_site
  padding-top: 15px

.clinic_site .check_box_label
  float: none
  padding: 10px
  padding-right: 20px

.clinic_site input
  margin-right: 5px

.listing_filter
  float: left

.listing_filter label
  margin-right: 5px

table#submission_summary
  margin-top: 20px

// prevent hidden fields from showing in FF 3.5
input[type="hidden"]
  display: none

.btn-deselect
  margin-top: 5px

#new_clinic, #edit_unit
  margin-left: 25px

.edit_clinic
  margin-bottom: 10px

.centered_wrapper
  text-align: center

.nav_links
  display: inline-block
  margin-bottom: 25px

.nav_link
  float: left
  margin-right: 12px
  margin-left: 12px

.nav_icon
  width: 50px
  height: 50px

.center
  display: block
  margin-left: auto
  margin-right: auto

// ANZARD Logos
img.logo
  height: 140px
  padding-left: 20px

.container-flex
  display: flex

.container-fixed-item
  width: 550px

.container-flex-item
  flex-grow: 1

.container
  width: 1100px

